# ChangeLog for x11-wm/sawfish
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/ChangeLog,v 1.128 2014/02/09 10:41:37 pacho Exp $

  09 Feb 2014; Pacho Ramos <pacho@gentoo.org> -files/libtool.patch,
  -files/sawfish-1.3.3-cflags.patch, -files/sawfish-1.3.3-parallel-make.patch,
  -files/sawfish-1.3.5.2-pangoxft.patch, -files/sawfish-1.6.2-xinerama.patch,
  -files/sawfish-1.6.3-prompt.patch, -sawfish-1.8.2.ebuild,
  -sawfish-1.9.0.ebuild, metadata.xml:
  Move to maintainer-needed, drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> sawfish-1.9.1-r1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> sawfish-1.9.1-r1.ebuild:
  amd64 stable, bug #478252

  11 Apr 2013; Naohiro Aota <naota@gentoo.org> sawfish-1.9.1-r1.ebuild:
  Add ~x86-fbsd wrt bug #157553

  09 Apr 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for sh, wrt bug #458984

*sawfish-1.9.1-r1 (06 Apr 2013)

  06 Apr 2013; Pacho Ramos <pacho@gentoo.org>
  +files/sawfish-1.9.1-firefox.patch, +sawfish-1.9.1-r1.ebuild:
  Fix pangox-compat deps (#460498 by ustcscgy) and firefox resizing problem
  (#462016 by David Albrecht), drop old.

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for ia64, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for ppc, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.1.ebuild:
  Stable for amd64, wrt bug #458984

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> sawfish-1.9.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #427544
