@@ -1,16 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX 50sawfish-gentoo.el 366 SHA256 8e103a2e8a83fe9e299496bfa6c619a58a4f6ca8a335f37933b4aef8140d62f7 SHA512 a05fe8328ed42c11fcf7ce43eac8278e53d69610a53118283d1292c89c690aa85b43090cbcfd0995a9e2e92cb61277848404a27b1797e33c80ad09db752d8ba5 WHIRLPOOL a761c12c5ee396717d5cb459795fe40f0a9393a553d1e116493e65825245e85820fdcf0fb7e105adfc3b74908a7b364a184cbcd026d56d2ac91ae784ed344f7f
 AUX sawfish-1.9.1-firefox.patch 920 SHA256 68df77ecb3d2acc5a9a09808f047cbdfaa7d8b88413a1f240b87d9656421ba41 SHA512 194b27a5674113b0820d5e03892973fb15b377cac9c43913b0f5698eb63cf6da556ff0edcee2b426fc218ea97f44bbbf5b21a4d6aa73af4a907cfc7944c53966 WHIRLPOOL 9e501414981c2db917ef1f229f7809e6c606c6e920bd74041b40a50d032d52a6b98e1c6478881d16532929472db579272e7ecd10d93a7aa101b5848779b98a52
 DIST sawfish-1.9.1.tar.xz 2616612 SHA256 c1751abf46a52dead8a50fa4b91c09ff0540cb9cc988c76ebfea0bee9edd0618 SHA512 243a818e2cc2546c040f33fbc076bbcc4033b88f0b4be573f9daa80b2dcfd8d9dc97384d236b9b71d6efe08ad39bfd3f3f31b5c055b9b268418efb7668e27a42 WHIRLPOOL 9293221e4a1c7cfddbf5dd619ac9fcd6e8da02723b651e4b62f9baa9e7d7c66d6f0967a960b097c6d9c9f7b7b79de94070733b0e80a1954d9ce477a6187d89fc
 EBUILD sawfish-1.9.1-r1.ebuild 1628 SHA256 dd03514fde08330fdd0e1bd1c223301f2427f8b8d531477f7261bc64787bffd3 SHA512 0d0150fd2597b25cd5ff80cdc322d5aa1b7226825df9710cfc6d328be3808d43455a75a94a3ab818bbaeaca1e53e3da78370cc173d1a7a35af3122aea5caf511 WHIRLPOOL 24ffca9142170dad26d929428d646861b7cb967acbd30513a866f1e2d55b4fad2fa8cb42aef55d154f5e7e88d197d732c3a1a6e8ff1e250271f0ffe32d9eafbe
+EBUILD sawfish-1.9.1-r2.ebuild 1965 SHA256 e26a7bb37d07a38cef627440a95096a32062e90402e8d0c72ebae1f3cfd88d12 SHA512 84967ee540cf0648e57c8eaf7d9903ea8698662fcf104e405dadcdfd3d17092858aa9c0cb7ecec2fd28ad5c0c61fbd9654f8067ad48e2faee8e1f5bb88716caa WHIRLPOOL 7cb41e3a7d69b2357d4bbb96c8e0c4c80da1799b2e67f6d859536b477e5a0f03fe8d4684fb1317056fa5603b0540e60bd980111e2f6828eac48ffdd2f873ff8f
 EBUILD sawfish-1.9.1.ebuild 1520 SHA256 e019063e7be37c092d2dbe658f41af651d387fb56def6518c41dde77bde262cb SHA512 e9a83b8b8de21910aab4572f14b05db528e1973f3d98813bc17ee1e155ceaf9fd6b5d846249ce49c359492e7cfc829471d1e6700e50dac3864832fda6510dd58 WHIRLPOOL ded9cd15397ae4d69fef30ca413fb411c6ab69f12c7c5c8c73dc952f828408d91d6bbdd9c8f60a848bbe0a9a9dc39287c7ee920f61e1dc6c26f1aaff2b887889
-MISC ChangeLog 19395 SHA256 8d7cf7b6e1b2023d8fec96ce29382e661e829fdd9d86da3652abadb3aebc0a02 SHA512 e30ee5fbe4ea9994b1bb6783a08e50588a01eb7e28fe3f954d599c0263d3a08c1ed590acb7a87832d3b5dcae0c1b92b4704dacc398effcc9ff1edf497263a9f0 WHIRLPOOL 8f43ae5f2e70023514e6bbac2c629403ee8da63115770db90954af63d031e181b7754de5b95c7e0f441e87173608eaf7bf1778bbc676da9ecbe7688055541a66
-MISC metadata.xml 208 SHA256 98f8aa3fb70533eeab6b09d5bc30bd8f649ec13d9b04363490082fb87bb6032e SHA512 d5a7f3cb2fe57f8d7783ba358068648b122d9f5de81a17bff61ce600e42b6487e6f7e2a62c8be95cc7021cb3ea88716824b1ad0565da922ea753bea2417b3d3d WHIRLPOOL e38a6cdef2acb3efdc182efde482593790f773ab3bb9b66cced3af47e4ab39368757e17c4352c6cacaefa338341db88c3bcc3ffcd32aabd7984c5b19051a7bb7
+MISC ChangeLog 19615 SHA256 a3320d73d13a3b9f9dca08e70878b00bc72a930e89f0b6f0b0f0c84b91daa642 SHA512 ff369cccdd0abf38cf8747147d2c1588dd42a2aa0e44eaf2c36df8d470eed5ca9c1fbf670288c48431cbd820a310d15c9fd3ed2d8618ebcb826f71f330445d77 WHIRLPOOL d21c527d7173dc6dbe5464cadf54b83ea3a27480a1e284749f2ace396b47eab589a7e52f6dc8c782b435b09ae8f770ae6050a3a39f12d6a5725f129c51fa0e9c
+MISC metadata.xml 454 SHA256 d8c618498af756acd7146ba23b8f59e3026e442d63e8cf8b5c2f2a106261befc SHA512 e952b638ecee96194269d20a87ab97ed7b7e6f81b8666501b723f35b476b529fdf5ddf69d031eda8792a3cdf10c67e71ed1041f9bcdbf029a0521981d1620f3a WHIRLPOOL e53e3137028fa1f30011914b33fb44760d38add48a9b7bf3a06e12f27dbe3622f20663daa6d61ba0c7191ae07a8925d68578ffbd710367f697a1a91f8ecd5c82
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlL3W2IACgkQCaWpQKGI+9TfywCfQfxX5YQXArFxIrtci0BuLJGm
-TdMAnR4oKLCe0T9BDOthD2/w8L115BKE
-=KUPb
+iQGcBAEBCAAGBQJS+UoAAAoJEJQzkH1pP7W4A3sL/2Gq8FeRcts1IhQ4RdQXiE63
+eKklY5yMALf9PB3bS2ncqxW+MYaOiTK6iBPxlmww/4Tfs8yOph2kz08Pq1xOKuO3
+pACnm6/N0LEbxtalgHircoXX9e3eroMwlbhNRj8RPzpcjmC8XadJkwIXVnxirbMa
+PT2loiF0HI8BGHzRlKSv4lJESNfaJInQn0a3psg1yPXwD97bf9AU6Zd/YLjqIREl
+w46fn2CU+vhNsLAJnkOQz37A66zYS5Us9suCV17CDu6acGuUrmrh0PGrMbxtFTQe
+HYSoo30b60swcAIHPIDAOfouuxpIDeV9ocA+2FRgic3wDgnKgcTGMTALe3wEKnhy
+TCNPK60NbU0cQq2/iwqxTyAGrSagjIvV7qwKX4kIUe2+DlwkFi6rp3tG+MlGcXfs
+F4Qi1mZ6NxL072pJmCBf9BSc/2UJS4C4q9GYBbV+447RKnO4Bs7n3OFgo0WV8uVO
+xfDbMzMzFFp+rQJhH+xsuIZ/D6hbWJz4OJf/tuqZ4w==
+=Y+FV
 -----END PGP SIGNATURE-----
